// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@top-navigation-bar/action * action/on press check 1`] = `
<Wrapper
  forwardedRef={null}
  icon={[Function]}
  onPress={
    [MockFunction] {
      "calls": Array [
        Array [
          undefined,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
/>
`;

exports[`@top-navigation-bar/action * action/with icon uri 1`] = `
<Wrapper
  forwardedRef={null}
  icon={[Function]}
/>
`;

exports[`@top-navigation-bar/action * bar/alignment: center 1`] = `
<Wrapper
  alignment="center"
  forwardedRef={null}
  title="Test"
/>
`;

exports[`@top-navigation-bar/action * bar/subtitle 1`] = `
<Wrapper
  forwardedRef={null}
  subtitle="Subtitle"
  title="Test"
/>
`;

exports[`@top-navigation-bar/action * bar/title 1`] = `
<Wrapper
  forwardedRef={null}
  title="Test"
/>
`;

exports[`@top-navigation-bar/action * bar/with actions 1`] = `
<Wrapper
  forwardedRef={null}
  leftControl={
    <ActionMock
      icon={[Function]}
      onPress={[MockFunction]}
      testID="@top-navbar-left"
    />
  }
  rightControls={
    Array [
      <ActionMock
        icon={[Function]}
        onPress={[MockFunction]}
        testID="@top-navbar-right-1"
      />,
      <ActionMock
        icon={[Function]}
        onPress={[MockFunction]}
        testID="@top-navbar-right-2"
      />,
      <ActionMock
        icon={[Function]}
        onPress={[MockFunction]}
        testID="@top-navbar-right-3"
      />,
    ]
  }
  subtitle="Subtitle"
  title="Test"
/>
`;

exports[`@top-navigation-bar/action * texts (styled) 1`] = `
<Wrapper
  forwardedRef={null}
  subtitle="Subtitle"
  subtitleStyle={
    Object {
      "color": "red",
    }
  }
  title="Test"
  titleStyle={
    Object {
      "fontSize": 24,
    }
  }
/>
`;
